2009-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.h: Expose MediaFrame::IsKeyFrame to C.

	* cbinding.cpp|h: Regenerated.

2009-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* enums.cpp: Rename MediaElementState -> MediaState. Add 'Paused'
	to the enum->str conversion table.

2009-06-15  Alan McGovern  <amcgovern@novell.com>

	* mediaplayer.cpp: The MediaPlayer should ref the MediaElement
	  it's attached to otherwise it can access the element after
	  the element has been destroyed. Stops 238 crashing.

2009-06-14  Andreia Gaita  <avidigal@novell.com>

	* value.[h.in|cpp]: (CreateUnref*) Accept EventObject instead of DPs, since 
	there are certain refcounted objects that aren't child classes of
	DependencyObject.
	Wrap null objects but don't try to unref them.
	* value.h: regen

2009-06-14  Andreia Gaita  <avidigal@novell.com>

	* debug.[h|cpp]: add max frame arg for finer control when getting 
	stack traces

2009-06-12  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp|h: import_xmlns now validates the namespace so we can
	raise an error if it is invalid.

2009-06-12  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Don't allow dtds.

2009-06-12  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: SL doesn't handle NaN the same way that strtod does.

2009-06-12  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Use the value attribute parsing for enum types, this
	allows them to have x:Key and x:Name attributes.

2009-06-12  Sebastien Pouliot  <sebastien@ximian.com>

	* dependencyproperty.g.cpp: Regenerated
	* deployment.h: Update ExternalCallersFromCrossDomainProperty
	generator-related properties and add unmanaged accessors
	* enumscpp|h: Remove CrossDomainAccessFullAccess value which was
	dropped after SL2 beta2
	* uri.cpp|h: Add new Uri::SameSiteOfOrigin method
	* validators.cpp|h: Add new CrossDomainValidator that ensure we
	can set only once Deployment::ExternalCallersFromCrossDomainProperty
